Fixe contrast resolution for desktop headline

--- a/assests/css/desktop.css
+++ b/assests/css/desktop.css
@@ -108,7 +108,6 @@
     font-weight: 500;
     font-size: 32px;
     line-height: 44px;
-    color: #fff;
   }
 
   .description {
@@ -120,6 +119,17 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 32px;
+  }
+
+  h1.primary-text,
+  h2.support-text,
+  p.description {
+    font-style: normal;
+    background-color: #050505;
+  }
+
+  h2.support-text,
+  p.description {
     color: #fff;
   }
 
